# payload_dumper

./: .gitignore  README.md  payload_dumper.py  pyproject.toml  requirements.txt  run_payload_dumper.sh  update_metadata.proto  update_metadata_pb2.py
.github/workflows/: release.yml  tests.yml
src/payload_dumper/: __init__.py  __main__.py  cli.py  core.py  source.py
tests/: conftest.py  test_cli.py  test_core.py  test_source.py  test_stdout_streaming.py
