[project]
name = "payload-dumper"
version = "2.0.0"
description = "Extract partition images from Android OTA payload.bin files"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Manoj Anasuri", email = "manojanasuri16@gmail.com" },
]
dependencies = [
    "protobuf>=4.21.0",
    "brotli>=1.0.9",
]

[project.scripts]
payload-dumper = "payload_dumper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "grpcio-tools>=1.70.0",
]
