[project]
name = "payload-dumper"
version = "2.1.0"
description = "Extract partition images from Android OTA payload.bin files"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Manoj Anasuri", email = "manojanasuri16@gmail.com" },
]
dependencies = [
    "protobuf>=4.21.0",
    "rich>=13.0.0",
]

[project.scripts]
payload-dumper = "payload_dumper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/payload_dumper"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.70.0",
]
