[project]
name = "android-payload-dumper"
version = "2.2.0"
description = "Extract partition images from Android OTA payload.bin files — locally, from a URL, or straight from an OTA .zip"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Manoj Anasuri", email = "manojanasuri16@gmail.com" },
]
dependencies = [
    "protobuf>=4.21.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
payload-dumper = "payload_dumper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/payload_dumper"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.70.0",
]
